// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapChildren when children is Animate component should apply startAnimation 1`] = `
Array [
  <ReactSimpleAnimate
    className={undefined}
    delaySeconds={0}
    durationSeconds={0.3}
    easeType="linear"
    endStyle={undefined}
    forceUpdate={false}
    onComplete={undefined}
    onCompleteStyle={undefined}
    onError={undefined}
    refCallback={undefined}
    reverseDelaySeconds={0}
    startAnimation={true}
    startStyle={Object {}}
    tag="div"
    transition=""
/>,
]
`;

exports[`mapChildren when children is Animate component should apply startAnimation according to willEnter state 1`] = `
Array [
  <ReactSimpleAnimate
    className={undefined}
    delaySeconds={0}
    durationSeconds={0.3}
    easeType="linear"
    endStyle={undefined}
    forceUpdate={false}
    onComplete={undefined}
    onCompleteStyle={undefined}
    onError={undefined}
    refCallback={undefined}
    reverseDelaySeconds={0}
    startAnimation={false}
    startStyle={Object {}}
    tag="div"
    transition=""
/>,
]
`;

exports[`mapChildren when children is Animate component should apply startAnimation according to willEnter state 2`] = `
Array [
  <ReactSimpleAnimate
    className={undefined}
    delaySeconds={0}
    durationSeconds={0.3}
    easeType="linear"
    endStyle={undefined}
    forceUpdate={false}
    onComplete={undefined}
    onCompleteStyle={undefined}
    onError={undefined}
    refCallback={undefined}
    reverseDelaySeconds={0}
    startAnimation={true}
    startStyle={Object {}}
    tag="div"
    transition=""
/>,
]
`;

exports[`mapChildren when children is Animate component should apply startAnimation according to willLeave state 1`] = `
Array [
  <ReactSimpleAnimate
    className={undefined}
    delaySeconds={0}
    durationSeconds={0.3}
    easeType="linear"
    endStyle={undefined}
    forceUpdate={false}
    onComplete={undefined}
    onCompleteStyle={undefined}
    onError={undefined}
    refCallback={undefined}
    reverseDelaySeconds={0}
    startAnimation={false}
    startStyle={Object {}}
    tag="div"
    transition=""
/>,
]
`;

exports[`mapChildren when children is Animate component should apply startAnimation according to willLeave state 2`] = `Array []`;

exports[`mapChildren when willLeave set to false should not filter components 1`] = `
Array [
  <Unknown
    style={
        Object {
            "transition": "0.3s all linear",
          }
    }
/>,
]
`;

exports[`mapChildren when willLeave set to true should filter out components which will unmont 1`] = `Array []`;
